--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    cursor: url('assets/cursor.png'), auto;
-    
+    box-sizing: border-box;    
   }
 
   body {
